alterações busca carreira

--- a/english/index.html
+++ b/english/index.html
@@ -25,7 +25,7 @@
             <div class="actions">
 				<a class="btn d-none d-md-inline-block" href="../">Português</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
-               <!-- <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a> -->
+               <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
@@ -77,6 +77,28 @@
 			<div class="timeline">
 				<div class="item">
 					<div class="work-place">
+						<h3 class="place">Banco Bradesco S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title"> Senior Analyst - Controlling Department </div>
+						<div class="time">2022</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Joined the Controlling Department at Bradesco to assist in
+							work related to data analysis and software engineering. </br>
+						</br>
+						Technologies I work with:
+						<ul>
+							<li>Databases: SQL Server; </li>
+							<li>Programming languages: R and Sas.</li>
+						</ul>
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
 						<h3 class="place">Banco do Brasil S/A</h3>
 						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
 						<br />
@@ -88,7 +110,7 @@
 					<div class="job-desc">
 						<p>Joined the Cyber and Fraud department using data modeling for fraud detection. </br>
 						</br>
-						Technologies I work with: 
+						Technologies I worked with: 
 						<ul>
 							<li>Distributed computing: Cloudera (Spark, Hive, Hdfs, Kafka); </li>
 							<li>Servers: CentOs, Red Hat; </li>
