--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="actions">
 				<a class="btn d-none d-md-inline-block" href="english">English</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Entre em Contato</a>
-                <!-- <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a> -->
+                <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
@@ -78,18 +78,40 @@
 			<div class="timeline">
 				<div class="item">
 					<div class="work-place">
+						<h3 class="place">Banco Bradesco S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title"> Analista de Controladoria Sênior </div>
+						<div class="time">2022</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Entrei na Controladroia do Bradesco para auxiliar em 
+						trabalhos relacionados com a análise de dados e construção de softwares. </br>
+						</br>
+						Tecnologias com as quais trabalho:
+						<ul>
+							<li>Bancos de dados: SQL Server; </li>
+							<li>Linguagens de programação: R e Sas.</li>
+						</ul>
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
 						<h3 class="place">Banco do Brasil S/A</h3>
 						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title"> Data Scientist <br /> (Assessor) </div>
+						<div class="title"> Ciêntista de Dados <br /> (Assessor) </div>
 						<div class="time">2021</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
 						<p>Entrei na Unidade de Cyber e Fraudes utilizando modelagem de dados para prevenção de fraudes. </br>
 						</br>
-						Tecnologias com as quais trabalho:
+						Tecnologias com as quais trabalhei:
 						<ul>
 							<li>Computação distribuida: Cloudera 6 (Spark, Hive, Hdfs, Kafka); </li>
 							<li>Servidores: CentOs, Red Hat;  </li>
