Atualização cursos Scala

--- a/english/index.html
+++ b/english/index.html
@@ -634,15 +634,54 @@
 							<br />
 							<ul>
 								<li> Course <a href="https://www.daryus.com.br/curso/web-application-security"> description and syllabus </a>. </li>
-								<li> Course <a href = ""../documents/TreinamnetoWebApplicationSecurity.png"> certificate </a>.</li>
+								<li> Course <a href = "../documents/TreinamnetoWebApplicationSecurity.png"> certificate </a>.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
 				</div><!--//item-->
 
-			
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Scala & Functional Programming Essentials | </br> Advanced Scala and Functional Programming </h3>
+						<div class="education-body">
+							Rock the JVM (Udemy)
+						</div><!--//education-body-->
+						<div class="time">2022</div>
+						<div class="desc">
+						Online courses provided by Udemy with workloads of 11.5 and 13.5 hours, respectively. Covers the basics of Scala,
+						object orientation, functional programming and pattern matching. The advanced course covers Implicits, concurrent programming and class type system.
+							<br />
+							<br />
+							<ul>
+								<li> Course <a href="https://www.udemy.com/course/rock-the-jvm-scala-for-beginners/"> description</a> (Essentials).</li>
+								<li> Course <a href="https://www.udemy.com/course/advanced-scala/"> description </a>(Advanced) .</li>
+								<li> Course <a href = "../documents/TreinamentoScalaFPEssentials.pdf"> certificate </a> (Essentials).</li>
+								<li> Course <a href = "../documents/TreinamentoAdvancedScalaFP.pdf"> certificate </a> (Advanced).</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Apache Spark 3 & Big Data Essentials in Scala</h3>
+						<div class="education-body">
+							Rock the JVM (Udemy)
+						</div><!--//education-body-->
+						<div class="time">2022</div>
+						<div class="desc">
+						Online course provided by Udemy with a workload of 7.5 hours; Covers using DataFrames, DataSets and RDDs, their methods and properties, for data engineering with Spark and Scala.
+							<br />
+							<br />
+							<ul>
+								<li> Course <a href="https://www.udemy.com/course/spark-essentials/"> description </a> .</li>
+								<li> Course <a href = "../documents/TreinamentosSparkBigDataEssentials.pdf"> Certificate </a> .</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				
 			</div><!--//row-->
-			
 			
 		</section><!--//section-->
 
