Scala em portugues

--- a/index.html
+++ b/index.html
@@ -650,6 +650,47 @@
 						</div>
 					</div><!--//item-inner-->
 				</div><!--//item-->
+				
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Scala & Functional Programming Essentials | </br> Advanced Scala and Functional Programming </h3>
+						<div class="education-body">
+							Rock the JVM (Udemy)
+						</div><!--//education-body-->
+						<div class="time">2022</div>
+						<div class="desc">
+						Cursos online disponibilizados pela Udemy com cargas horárias de 11,5 e 13,5 horas, respectivamente. Cobre o básico de Scala,
+						orientação a objeto, programação funcional e reconhecimento de padrões. O curso avançado cobre Implicits, programação concorrente, sistema de tipagem de classes.
+							<br />
+							<br />
+							<ul>
+								<li> <a href="https://www.udemy.com/course/rock-the-jvm-scala-for-beginners/"> Descrição e ementa </a> do conteúdo do curso. (Essentials)</li>
+								<li> <a href="https://www.udemy.com/course/advanced-scala/"> Descrição e ementa </a> do conteúdo do curso.(Advanced)</li>
+								<li> <a href = "documents/TreinamentoScalaFPEssentials.pdf"> Certificado </a> do treinamento (Essentials).</li>
+								<li> <a href = "documents/TreinamentoAdvancedScalaFP.pdf"> Certificado </a> do treinamento (Advanced).</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Apache Spark 3 & Big Data Essentials in Scala</h3>
+						<div class="education-body">
+							Rock the JVM (Udemy)
+						</div><!--//education-body-->
+						<div class="time">2022</div>
+						<div class="desc">
+						Curso online disponibilizado pela Udemy com carga horária de 7,5; Cobre a utilização de DataFrames, DataSets e RDDs, seus métodos e propriedades, para engenharia de dados com Spark e Scala.
+							<br />
+							<br />
+							<ul>
+								<li> <a href="https://www.udemy.com/course/spark-essentials/"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href = "documents/TreinamentosSparkBigDataEssentials.pdf"> Certificado </a> do treinamento.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
 			
 			</div><!--//row-->
 			
